# arc-3

./: .gitignore  Makefile  README.md  README.upstream.md  taaf-duck-harness-kaggle-share.ipynb
ARC3-Inference/configs/: a108.qwen36.nvfp4.json  a424.qwen36.duck.json  a424.qwen36.fast.json  a424.qwen36.spec.json  a424.qwen36.study.json  gcp.qwen36.duck.json  gcp.qwen36.duckv2.json  inference.openrouter.json
ARC3-Inference/scripts/: bench_throughput.py  test_tier_a_fixes.py  test_v2_ledger.py  test_world_model_live.py
ARC3-Inference/viewer/: data.py  index.html
docs/: a108_runbook.md  a424_study_run.md  agent_walkthrough.md  harness.html  tufa_duck_harness_a108_audit.md
docs/data/: runs-index.json  signals.json  tool-calls.json
gcp/: launch.sh  launch_ffa7g.sh  launch_ffa7gnh.sh  launch_ffa7gnsg.sh  launch_single_game.sh  qwen36_native_startup.sh  qwen36_opine_startup.sh  qwen36_serve_startup.sh  remaining_games.py  resource_sampler.sh  shutdown.sh  single_game_startup.sh  startup.sh  tufa0_startup.sh  tufa1_startup.sh  tufa1b_startup.sh  tufa1c_startup.sh  upload_model.sh  v12_run.py  v12_run_single.py  v12_startup.sh  v12a7_startup.sh  v12ff-reference-prompts.py  v12ff2_startup.sh  v12ff3_startup.sh  v12ff4_startup.sh  v12ff_startup.sh  v12ffa7_startup.sh  v12ffa7g_startup.sh  v12ffa7gnh_startup.sh  v12ffa7gnsg_startup.sh  v12model_startup.sh  v12pc_startup.sh  v12pcf_startup.sh
gcp/v12ff-patch/: prompts.py.diff  python_tool_sandbox.py.diff  runtime_state.py.diff  solver.py.diff  tool_agent.py.diff
gcp/v12ff4-patch/: README.md  click_heuristics.py  multiframe-and-clicks.diff
gcp/v12t-patch/: tool_agent_telemetry.diff
harnesses/: README.md
harnesses/action7-anim/: MANIFEST.md
harnesses/baseline-v12/: MANIFEST.md  README.dataset.md  benchmark_initial.pkl  deploy_target.pkl  git_status.txt  setup_commands.json  taaf-kaggle-bundle.json  teardown_commands.json
harnesses/baseline-v12/src/ARC3-Inference/: Makefile  README.md  pyproject.toml
harnesses/baseline-v12/src/ARC3-Inference/configs/: eval.json  inference.json  inference.openrouter.json
harnesses/baseline-v12/src/ARC3-Inference/inference/agent/: prompts.py  python_tool_sandbox.py  tool_agent.py
harnesses/baseline-v12/src/ARC3-Inference/inference/framework/: run.py  solver.py
harnesses/baseline-v12/src/ARC3-Inference/inference/tools/: eval.py  significance.py  traces.py
harnesses/baseline-v12/src/ARC3-Inference/inference/utils/: rearc_baselines.py  rearc_version.py  viewer_artifacts.py
harnesses/baseline-v12/src/tufa-arc-agi-framework/: README.md  pyproject.toml
harnesses/baseline-v12/src/tufa-arc-agi-framework/src/taaf/: competition_arcade.py  deploy.py  deploy_kaggle.py  deploy_slurm.py  game_api.py  game_examples.py  kaggle_random.py  solver.py  solver_examples.py  standard_benchmarks.py
harnesses/baseline-v12/src/tufa-arc-agi-framework/src/taaf/kaggle/: taaf_kaggle_run.ipynb  taaf_kaggle_run_share.ipynb
harnesses/ffa7g/: MANIFEST.md
harnesses/frame-full/: MANIFEST.md
harnesses/frame-full-a7/: MANIFEST.md
harnesses/predict-check/: MANIFEST.md
harnesses/world-model/: MANIFEST.md
kaggle/: kernel-metadata.json  preamble.txt  resource_profiler.py  submission-template-fastcommit.ipynb  tufa-labs-duck-harness-june-30-milestone-winner.ipynb
kaggle/profile-run/: arc3-resource-profile.ipynb  kernel-metadata.json  resource_profile.csv  run-summary.txt
kaggle/timing-run/: arc3-timing-test-55-games.ipynb  kernel-metadata.json
logs/20260711_185043_a424-study-ft09/: .per_game_cards.pkl  benchmark.json  deploy_meta.json  diagnostics.html  run_config.json  summary.txt
logs/20260711_200118_a424-control-25game/: .per_game_cards.pkl  benchmark.json  deploy_meta.json  diagnostics.html  requests.jsonl  run_config.json  solver.pkl  summary.txt
logs/20260711_231159_a424-think3x-uncapped/: .per_game_cards.pkl  benchmark.json  deploy_meta.json  diagnostics.html  games.pkl  intermediate_states.pkl  run_config.json  solver.pkl  summary.txt
logs/20260712_130533_g4-v1-fullstack-32k/: .per_game_cards.pkl  benchmark.json  deploy_meta.json  diagnostics.html  git_info.txt  run_config.json  solver.pkl  summary.txt
logs/20260712_130556_g4-v2-ledger-64k/: .per_game_cards.pkl  benchmark.json  deploy_meta.json  diagnostics.html  games.pkl  run_config.json  solver.pkl  (+1 more)
scripts/: a108_bootstrap_report.sh  analyze_turn_stats.py  build_profile_notebook.py  build_timing_notebook.py  check_a108_env.sh  check_workspace.sh  export_game_thumbs.py  export_runs_index.py  export_signal_runs.py  export_tool_calls.py  export_usage.py  export_viewer_data.py  publish_run.sh
(+28562 files in other folders)
