[build-system]
requires = ["setuptools==80.10.2", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "arc3-inference"
version = "0.1.0"
description = "An agent for ARC-AGI game solving with local tool-using inference."
readme = "README.md"
authors = [
    { name = "ARC3 Inference authors" },
]
requires-python = "==3.12.12"
keywords = ["re-arc", "agent", "puzzle-solving"]
dependencies = [
    "arc-agi-3-local @ git+https://github.com/Tufalabs/re-arc-3.git@master",
    "arcengine==0.9.3",
    "matplotlib==3.10.6",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    # TEMP: editable override in [tool.uv.sources] below. Restore: @ git+https://github.com/Tufalabs/tufa-arc-agi-framework.git@main
    "tufa-arc-agi-framework",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.6",
]
server = [
    "ninja==1.13.0",
    "vllm @ https://wheels.vllm.ai/8fbe3f303fbf995afe4c409309aa8e889235339e/vllm-0.17.2rc1.dev150%2Bg8fbe3f303-cp38-abi3-manylinux_2_31_x86_64.whl",
]

[project.scripts]
inference-taaf-run = "inference.framework.run:main"
inference-view = "viewer.server:main"
inference-eval = "inference.tools.eval:main"
inference-eval-plot = "inference.tools.eval_plot:main"
inference-significance = "inference.tools.significance:main"
inference-traces = "inference.tools.traces:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["inference", "inference.*", "viewer", "viewer.*"]
exclude = ["examples*", "rllm*", "Agent_Context*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# TEMP: use the local editable tufa-arc-agi-framework checkout (branch submission-share-mode /
# PR #29, for make_share_version) instead of git@main. Revert this table + the dependency line
# above before committing.
[tool.uv.sources]
tufa-arc-agi-framework = { path = "../tufa-arc-agi-framework", editable = true }
