[project]
name = "tufa-arc-agi-framework"
version = "0.1.0"
description = "ARC-AGI3 orchestration framework (TAAF) by Tufa Labs"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "arc_agi>=0.9.8",
    "arc-agi-3-local @ git+https://github.com/Tufalabs/re-arc-3.git@master",
    "arcengine>=0.9.3",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "matplotlib>=3.10",
    "numpy>=2.2",
    "scipy>=1.10",
    "kaggle>=2.2.0"
]

[dependency-groups]
dev = [
    "deepdiff>=8.6",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
    "nbstripout>=0.9.1",
    "pyright>=1.1.300",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
taaf-kaggle-random = "taaf.kaggle_random:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
taaf = ["kaggle/*.ipynb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Scope collection to ``tests/`` so the deploy notebooks' source
# snapshots (``notebooks/runs/deploy/.../src/re-arc-3/pipeline/worker_tests/``)
# don't get vacuumed up — those expect re-arc-3's own conftest and would
# ImportError on collection without it.
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselected by default, run with --slow or `make test-all`)"]
addopts = "-m 'not slow'"
# `error` turns any unsilenced warning into a test failure — keeps both
# `make prepare` and `make prepare-ci` honest about deprecations and
# library-emitted RuntimeWarnings. Specific known-benign warnings are
# whitelisted below; pytest checks this list in reverse, so later entries
# take precedence over `error`.
# - "Precision loss": scipy's ttest_rel on near-identical paired data
#   (small n_games + similar score distributions). Mathematically meaningful
#   p-value still computed; warning is just noise. The runtime equivalent
#   lives at the top of `taaf.diagnostics` (notebook / plain-Python runs).
filterwarnings = [
    "error",
    "ignore:Precision loss occurred:RuntimeWarning",
    # arc_agi leaks an asyncio event loop on GC; surfaces as pytest's
    # PytestUnraisableExceptionWarning during test teardown. Transitive-dep
    # cleanup quirk, not a bug in our code.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
line-length = 120
